--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,21 @@
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+<web-app>                     
+  <display-name>Quiz Application</display-name>
+  
+  <welcome-file-list>
+      <welcome-file>home.jsp</welcome-file>
+  </welcome-file-list>
+  
+  <servlet>
+      <servlet-name>QuizServlet</servlet-name>
+      <servlet-class>QuizServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+      <servlet-name>QuizServlet</servlet-name>
+      <url-pattern>/quiz</url-pattern>
+  </servlet-mapping>
+    
 </web-app>
